--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -648,9 +648,9 @@ copytmap <ESC> q Q w <C-c>
 ## CUSTOM AREA
 map ,f fzf_select
 map ,s shell ./%f
-map gcs0 shell wal -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
-map gcs1 shell wal --backend colorthief -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
-map gcs2 shell wal --backend colorz -i %f -o "$HOME/HD/Pictures/Wallpapers/restart.sh"
+map gcs0 shell wal -a 85 -i %f -o "$HOME/scripts/restart.sh"
+map gcs1 shell wal --backend colorthief -a 85 -i %f -o "$HOME/scripts/restart.sh"
+map gcs2 shell wal --backend colorz -a 85 -i %f -o "$HOME/scripts/restart.sh"
  
 map gsp shell rtmpdump -r $(<%f) -o %f.mp4
 map gas cd /var/www/sig-arteris
