master | rotininha, tirei uns plugins que estavam zoando o tempo de abertura do vim e tentei resolver a treta do ranger zoar preview de imagens quando o urxvt tem fundo transparente (não consegui direito, o que me deixou pistola)

--- a/i3/config
+++ b/i3/config
@@ -338,6 +338,6 @@ bar {
 
 exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio --start
-exec --no-startup-id compton -bf
+exec --no-startup-id compton -b
 exec --no-startup-id redshift
 exec --no-startup-id feh --bg-scale ~/wallpaper.png
