--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -54,40 +54,40 @@
 # Rarely installed browsers get higher priority; It is assumed that if you
 # install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
 # other hand are often only installed as fallback browsers.
-# ext x?html?, has surf,           X, flag f = surf -- file://"$1"
-# ext x?html?, has vimprobable,    X, flag f = vimprobable -- "$@"
-# ext x?html?, has vimprobable2,   X, flag f = vimprobable2 -- "$@"
-# ext x?html?, has qutebrowser,    X, flag f = qutebrowser -- "$@"
-# ext x?html?, has dwb,            X, flag f = dwb -- "$@"
-# ext x?html?, has jumanji,        X, flag f = jumanji -- "$@"
-# ext x?html?, has luakit,         X, flag f = luakit -- "$@"
-# ext x?html?, has uzbl,           X, flag f = uzbl -- "$@"
-# ext x?html?, has uzbl-tabbed,    X, flag f = uzbl-tabbed -- "$@"
-# ext x?html?, has uzbl-browser,   X, flag f = uzbl-browser -- "$@"
-# ext x?html?, has uzbl-core,      X, flag f = uzbl-core -- "$@"
-# ext x?html?, has midori,         X, flag f = midori -- "$@"
-# ext x?html?, has chromium,       X, flag f = chromium -- "$@"
-# ext x?html?, has opera,          X, flag f = opera -- "$@"
-# ext x?html?, has firefox,        X, flag f = firefox -- "$@"
-# ext x?html?, has seamonkey,      X, flag f = seamonkey -- "$@"
-# ext x?html?, has iceweasel,      X, flag f = iceweasel -- "$@"
-# ext x?html?, has epiphany,       X, flag f = epiphany -- "$@"
-# ext x?html?, has konqueror,      X, flag f = konqueror -- "$@"
-# ext x?html?, has elinks,          terminal = elinks "$@"
-# ext x?html?, has links2,          terminal = links2 "$@"
-# ext x?html?, has links,           terminal = links "$@"
-# ext x?html?, has lynx,            terminal = lynx -- "$@"
-# ext x?html?, has w3m,             terminal = w3m "$@"
-ext ts, has vim, terminal                  = vim "$@"
-ext html, has vim, terminal                = vim "$@"
+ext x?html?, has surf,             X, flag f = surf -- file://"$1"
+ext x?html?, has vimprobable,      X, flag f = vimprobable -- "$@"
+ext x?html?, has vimprobable2,     X, flag f = vimprobable2 -- "$@"
+ext x?html?, has qutebrowser,      X, flag f = qutebrowser -- "$@"
+ext x?html?, has dwb,              X, flag f = dwb -- "$@"
+ext x?html?, has jumanji,          X, flag f = jumanji -- "$@"
+ext x?html?, has luakit,           X, flag f = luakit -- "$@"
+ext x?html?, has uzbl,             X, flag f = uzbl -- "$@"
+ext x?html?, has uzbl-tabbed,      X, flag f = uzbl-tabbed -- "$@"
+ext x?html?, has uzbl-browser,     X, flag f = uzbl-browser -- "$@"
+ext x?html?, has uzbl-core,        X, flag f = uzbl-core -- "$@"
+ext x?html?, has midori,           X, flag f = midori -- "$@"
+ext x?html?, has chromium-browser, X, flag f = chromium-browser -- "$@"
+ext x?html?, has chromium,         X, flag f = chromium -- "$@"
+ext x?html?, has google-chrome,    X, flag f = google-chrome -- "$@"
+ext x?html?, has opera,            X, flag f = opera -- "$@"
+ext x?html?, has firefox,          X, flag f = firefox -- "$@"
+ext x?html?, has seamonkey,        X, flag f = seamonkey -- "$@"
+ext x?html?, has iceweasel,        X, flag f = iceweasel -- "$@"
+ext x?html?, has epiphany,         X, flag f = epiphany -- "$@"
+ext x?html?, has konqueror,        X, flag f = konqueror -- "$@"
+ext x?html?, has elinks,            terminal = elinks "$@"
+ext x?html?, has links2,            terminal = links2 "$@"
+ext x?html?, has links,             terminal = links "$@"
+ext x?html?, has lynx,              terminal = lynx -- "$@"
+ext x?html?, has w3m,               terminal = w3m "$@"
 
 #-------------------------------------------
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = $EDITOR -- "$@"
+mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = $EDITOR -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
@@ -151,6 +151,7 @@ ext pdf, has atril,    X, flag f = atril -- "$@"
 ext pdf, has okular,   X, flag f = okular -- "$@"
 ext pdf, has epdfview, X, flag f = epdfview -- "$@"
 ext pdf, has qpdfview, X, flag f = qpdfview "$@"
+ext pdf, has open,     X, flag f = open "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
@@ -181,6 +182,8 @@ mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
+mime ^image, has geeqie,    X, flag f = geeqie -- "$@"
+mime ^image, has gwenview,  X, flag f = gwenview -- "$@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
 
@@ -217,7 +220,7 @@ label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
 
 # Define the editor for non-text files + pager as last action
               !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
-label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = $EDITOR -- "$@"
+label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ${VISUAL:-$EDITOR} -- "$@"
 label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
