--- a/i3/config
+++ b/i3/config
@@ -309,8 +309,8 @@ bindsym $mod+n exec $term -e ncmpcpp
 bindsym $mod+Shift+Return exec $term -e tmux
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
-bindsym --release Print exec notify-send 'screenshot' 'please select area' && scrot -s ~/prints/print_%d_%m_%Y_%T.png
-bindsym --release Shift+Print exec notify-send 'screenshot taken in ~/prints/' && scrot ~/prints/print_%d_%m_%Y_%T.png
+bindsym --release Print exec notify-send 'screenshot' 'please select area' && scrot -s ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
+bindsym --release Shift+Print exec notify-send 'screenshot taken in ~/Pictures/printscreen/' && scrot ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
 gaps inner 5
 gaps outer 5
 
@@ -340,4 +340,4 @@ exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio --start
 exec --no-startup-id compton -bfCG
 exec --no-startup-id redshift
-exec --no-startup-id feh --bg-scale ~/wallpaper.png
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
