--- a/i3blocks/config
+++ b/i3blocks/config
@@ -98,6 +98,15 @@ instance=0
 color=#FFFF00
 interval=30
 
+# Brightness indicator
+#
+[brightness]
+label=
+command=/usr/share/i3blocks/brightness
+color=#55FFAA
+interval=2
+signal=1
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
